--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@ console.log(data0);
 //const data = riffleShuffle(data0.playlist_clips);
 //const data = likeSort(data0.playlist_clips);
 //const data = riffleShuffle(likeSort(data0.playlist_clips));
-const data = riffleShuffleReverse(data0.playlist_clips);
+const data = riffleShuffle(data0.playlist_clips);
+//const data = riffleShuffleReverse(data0.playlist_clips);
 /*
 shuffle(data0.playlist_clips);
 const data = data0.playlist_clips;
